--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -20,7 +20,7 @@
            "type": "custom",
         },
 	{
-            "type": "title",
+            "type": " ",
             "keyWidth": 10
         },
         "break",
